Avoid checking for duplicates when adding a context to the cache (perf. reasons). b=72217, r=jag, sr=brendan